# haskell-hangman

./: README.md  hangman.cabal
src/: Main.hs  logic.hs
tests/: tests.hs
